--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -1,25 +1,30 @@
 .post_header{
     background-color: #f1f1f1;
     color: #000;
-    padding: 0px 70px !important;
+    /* padding: 0px 70px !important; */
 }
 .post_header .nav-link {
     color: #545454 !important;
-    padding-right: 1.0rem !important;
-    padding-left: 0.5rem !important;
+    padding: 0.5rem 0.5rem !important;
     font-weight: 700;
-    font-size: 16px;
+    font-size: 15px;
 }
 .post_header .nav-link:hover{
     color: #1171ef !important;
 }
 #navbar-main {
-    padding: 20px;
-    margin-bottom: 20px;
+    padding: 20px 0px 20px 44px !important;
+    margin-bottom: 13px;
 }
 select {
     border: unset !important;
     background-color: transparent !important;
     color: #545454 !important;
     font-weight: 700 !important;
+}
+@media (max-width: 767.98px) { 
+    .container-fluid {
+        display: flex;
+        justify-content: center !important;
+    }
 }
