--- a/src/components/PostHeader.css
+++ b/src/components/PostHeader.css
@@ -2,7 +2,7 @@
     background-color: #f1f1f1;
     display: flex;
     align-items: center;
-    margin-bottom: 20px;
+    margin-bottom: 13px;
     padding-left: 20rem;
     margin-left: 25px;
     margin-right: 25px;
@@ -20,7 +20,7 @@
         background-color: #f1f1f1;
         display: flex;
         align-items: center;
-        margin-bottom: 20px;
+        margin-bottom: 13px;
         padding-left: unset;
     }
 }
