--- a/src/components/PreHeader.css
+++ b/src/components/PreHeader.css
@@ -1,14 +1,19 @@
 .pre_header {
+    height: 80px;
+}
+.pre_header-bg {
     background: linear-gradient(87deg, #11cdef 0, #1171ef 100%) !important;
 }
 .navbar-brand {
 font-size: 40px !important;
+
 }
 .navbar-brand img {
     width: 355px;
     object-fit: cover;
 }
 .pre_header .navbar {
-    padding: 5px 70px !important;
+    padding: 1px 70px !important;
+    height: 80px;
 
 }
